--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 # Ensure Hibernate creates tables before inserting data
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 spring.sql.init.mode=always
 spring.h2.console.enabled=true
